# FalconStrix-

./: .env  .env.example  .gitignore  CMakeLists.txt  Folder Structure  README.md  SETUP_KALI.md  backend.cpp  docker-compose.yml  dummy_passwd.txt  requirements.txt  run_all.sh
backend/: alert_service.py  auth_service.py  db_connection.py  event_service.py  fsm_service.py  hidrs_events.pipe  ipc_config.py  main_backend.py  process_service.py  test_ipc_ping.py
database/: backfill_incident_trends.sql  migration_add_user_password.sql  queries.sql  sample_data.sql  schema.sql
docs/: PROJECT_TASKS.md  README.md
gui_dashboard/: app.py  test_net.py
gui_dashboard/static/: script.js  style.css
gui_dashboard/templates/: dashboard.html  login.html  signup.html
os_engine_cpp/: CMakeLists.txt
os_engine_cpp/include/: behavior_detector.h  event_writer.h  process_monitor.h  resource_monitor.h  response_engine.h
os_engine_cpp/src/: behavior_detector.cpp  event_writer.cpp  main.cpp  process_monitor.cpp  resource_monitor.cpp  response_engine.cpp
red_team_py/: attack_controller.py  env_paths.py  file_tamper_simulator.py  login_simulator.py  process_flood.py
scripts/: dev-kali.sh  dev-windows.ps1
